RbA Build/src/objects/Mullion_Size_Configuration__c.object
<CustomObject>
    <description>Holds size configuration values for mullions and mullion units</description>
    <fields>
        <fullName>Max_Height__c</fullName>
        <description>Maximum Height in Inches</description>
        <inlineHelpText>Enter the maximum height</inlineHelpText>
        <label>Max Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Width__c</fullName>
        <description>Maximum Width in inches</description>
        <inlineHelpText>Enter the Maximum Width</inlineHelpText>
        <label>Max Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Height__c</fullName>
        <description>Minimum height in inches</description>
        <inlineHelpText>Enter the minimum height</inlineHelpText>
        <label>Min Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Width__c</fullName>
        <description>Minimum width</description>
        <inlineHelpText>Enter trhe minimum width</inlineHelpText>
        <label>Min Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mullion_Product_Configuration__c</fullName>
        <description>links to Product Configuration with a RecordType of Mullion</description>
        <inlineHelpText>Select the Product Configuration record</inlineHelpText>
        <label>Mullion Product Configuration</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Configuration__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Mullion</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Configuration__c</referenceTo>
        <relationshipLabel>Mullion Size Configurations</relationshipLabel>
        <relationshipName>Mullion_Size_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Mullion Size Configuration</label>
    <nameField>
        <label>Mullion Size Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mullion Size Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>